# os-rs

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  build.rs  flake.nix  run.sh  shell.nix
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  rust.yml
builder/: Cargo.toml
builder/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
interfaces/: Cargo.toml
interfaces/display/: Cargo.toml
interfaces/display/src/: lib.rs
interfaces/display/src/font/: mod.rs  monospace.rs
interfaces/display/src/manager/: mod.rs
interfaces/display/src/text/: mod.rs
interfaces/src/: lib.rs
kernel/: Cargo.toml
kernel/src/: lib.rs  main.rs  objects.rs
kernel/src/display/: color.rs  manager.rs  mod.rs  text.rs
kernel/src/display/font/: mod.rs  monospace.rs
kernel/src/interfaces/: mod.rs
kernel/src/memory/: global_allocator.rs  heap.rs  mod.rs  vec.rs
kernel/src/min_memory/: global_allocator.rs  mod.rs
kernel/src/objects/: mod.rs
libs/modules_common/: Cargo.toml
libs/modules_common/src/: init.rs  lib.rs
modules/display_text/: Cargo.toml
modules/display_text/interface/: Cargo.toml
modules/display_text/interface/src/: lib.rs
modules/display_text/processor_graphics/: Cargo.toml
modules/display_text/processor_graphics/src/: lib.rs
modules/display_text/src/: lib.rs  macros.rs
modules/display_text/src/processor_graphics/: font.rs  init.rs  mod.rs  traits_impl.rs
modules/memory/: Cargo.toml
modules/memory/src/: lib.rs
modules/memory/src/level4_recursive/: mod.rs
modules/paging/: Cargo.toml
modules/ram/: Cargo.toml
modules/ram/src/: lib.rs
modules/ram/src/phys/: mod.rs
modules/ram/src/virt/: mod.rs
modules/ram/src/virt/paging/: mod.rs
modules/virt_memory/: Cargo.toml
modules/virt_memory/src/: lib.rs
modules/virt_memory/src/paging/: mod.rs
src/: main.rs
