[package]
name = "os"
version = "0.0.0"
edition = "2024"

[workspace]
members = [
	"kernel/",
	"modules/display_text/",
]

[workspace.dependencies]
bootloader_api="0.11.10"
x86_64 = "0.15.2"
spin = "0.9.8"
lazy_static = {version = "1.5.0", features = ["spin_no_std"] }

display_text = { path = "./modules/display_text/", features = ["processor_graphics"] }

[build-dependencies]
kernel = { path = "./kernel/", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.10"

[dependencies]
ovmf-prebuilt = "0.2.2"
