[package]
name = "os"
version = "0.0.1"
edition = "2024"

[workspace]
members = [
	"kernel/", "libs/modules_common",
	"modules/display_text/", "modules/virt_memory",
]

[workspace.dependencies]
bootloader_api="0.11.10"
spin = "0.9.8"
lazy_static = {version = "1.5.0", features = ["spin_no_std"] }

display_text = { path = "./modules/display_text/", features = ["processor_graphics"] }
virt_memory = { path = "./modules/virt_memory/", features = ["paging"] }
modules_common = { path = "./libs/modules_common/" }

[build-dependencies]
kernel = { path = "./kernel/", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.10"

[dependencies]
ovmf-prebuilt = "0.2.2"
